# eSpinn

./: .gitignore  CMakeLists.txt  README.md
asset/archive/: .gitignore
game/: .gitignore  README.md  flappybird.py
src/: CMakeLists.txt  eSpinn.h  eSpinn_def.h  files_def.h
src/Learning/: Innovation.cpp  Innovation.h  Organism.cpp  Organism.h  OrganismBase.cpp  OrganismBase.h  Population.cpp  Population.h  Species.cpp  Species.h  neat_def.h
src/Models/: Connection.cpp  Connection.h  HebbPlasticity.cpp  HebbPlasticity.h  IzhiNeuron.cpp  IzhiNeuron.h  LifNeuron.cpp  LifNeuron.h  Network.cpp  Network.h  NetworkBase.cpp  NetworkBase.h  Neuron.cpp  Neuron.h  Sensor.cpp  Sensor.h  SigmNeuron.cpp  SigmNeuron.h  SpikeConnection.cpp  SpikeConnection.h  SpikeNeuron.cpp  SpikeNeuron.h  WeightWatcher.cpp  WeightWatcher.h
src/Plants/: CartPole.cpp  CartPole.h  CartPoleLogger.cpp  CartPoleLogger.h  Hexacopter.cpp  Hexacopter.h  Plant.cpp  Plant.h  PlantLogger.cpp  PlantLogger.h
src/PyModule/: PybindWrapper.cpp  PybindWrapper.h
src/Utilities/: CircularBuffer.cpp  CircularBuffer.h  DataGenerator.cpp  DataGenerator.h  Ejector.cpp  Ejector.h  Gate.cpp  Gate.h  Injector.cpp  Injector.h  Logger.cpp  Logger.h  Monitor.h  OutputBuffer.cpp  OutputBuffer.h  Utilities.cpp  Utilities.h
tasks/: CMakeLists.txt  data_generator.cpp  data_generator.h  eta.h  pole_balancing.cpp  pole_balancing.h  sim_approximation.cpp  sim_approximation.h  sim_ctrl.cpp  sim_ctrl.h  sim_ctrl_batch.sh  sim_flappy.py  sim_flappy_batch.sh  sim_hexa.cpp  sim_hexa.h  sim_pole_batch.sh  sim_virtual.cpp  sim_virtual.h
test/: CMakeLists.txt  test.h  test_gate.cpp  test_main.cpp  test_net.cpp  test_neuron.cpp  test_org.cpp  test_pop.cpp  test_py.py  test_utilities.cpp
